Atualização de bugs

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -403,7 +403,7 @@
 
                     <div class="col-xl-4 col-lg-4 col-md-6" data-aos="fade-up">
                         <div class="member">
-                            <div class="pic"><img src="~/assets/img/team/eu.jpeg" class="img-fluid" alt=""></div>
+                            <div class="pic"><img src="~/assets/img/team/WhatsApp Image 2020-10-28 at 18.45.56.jpeg" class="img-fluid" alt=""></div>
                             <div class="member-info">
                                 <h4>Rossini Rodriguês Alves</h4>
                                 <span>Fundador</span>
@@ -435,7 +435,7 @@
 
                     <div class="col-xl-4 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
                         <div class="member">
-                            <div class="pic"><img src="~/assets/img/team/gabriel.png" class="img-fluid" alt=""></div>
+                            <div class="pic"><img src="~/assets/img/team/WhatsAppImage 2020-10-28at18.57.09.jpeg" class="img-fluid" alt=""></div>
                             <div class="member-info">
                                 <h4>Gabriel Oliveira</h4>
                                 <span>Fundador</span>
