--- a/Views/Usuarios/EsqueceuSenha.cshtml
+++ b/Views/Usuarios/EsqueceuSenha.cshtml
@@ -4,7 +4,6 @@
     ViewBag.Title = "EsqueceuSenha";
 }
 
-<h2>EsqueceuSenha</h2>
 <div class="container mt-2">
     @using (Html.BeginForm())
     {
@@ -30,9 +29,9 @@
         </div>
     }
 
-    <div>
+    @*<div>
         @Html.ActionLink("Back to List", "Index")
-    </div>
+    </div>*@
 </div>
 
 @section Scripts {
