--- a/Views/Usuarios/Redefinir.cshtml
+++ b/Views/Usuarios/Redefinir.cshtml
@@ -4,8 +4,6 @@
     ViewBag.Title = "Redefinir";
 }
 
-<h2>Redefinir</h2>
-
 <div class="container mt-2">
 
     @using (Html.BeginForm())
@@ -19,19 +17,12 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Email, new
-                    {
-                        htmlAttributes = new
-                        {
-                            @class =
-                    "form-control",
-                            @disabled = "disabled"
-                        }
-                    })
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
                     @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                 </div>
             </div>
-            @Html.HiddenFor(model => model.Hash);
+
+            @Html.HiddenFor(model => model.Hash)
             @*
                 <div class="form-group">
                     @Html.LabelFor(model => model.Hash, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -65,9 +56,9 @@
         </div>
     }
 
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+    @*<div>
+            @Html.ActionLink("Back to List", "Index")
+        </div>*@
 </div>
 
 @section Scripts {
