--- a/Views/Usuarios/Index.cshtml
+++ b/Views/Usuarios/Index.cshtml
@@ -4,69 +4,431 @@
 
 
 <div class="container mt-3 mb-3">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,100,900,100italic,300italic,400italic,700italic,900italic|Oswald:300,400,500,700|Roboto:400,500|Montserrat:300,400,500,600|Source+Serif+Pro:400,600|Roboto+Slab|Roboto:300,300i,400,400i,700,700i' rel='stylesheet'>
 
-    <h2>Index</h2>
-
-    <p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            @*<th>
-                    @Html.DisplayNameFor(model => model.Senha)
-                </th>*@
-            <th>
-                @Html.DisplayNameFor(model => model.Celular)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Nascimento)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TiposUsuarios)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Sexos)
-            </th>
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                @*<td>
-                        @Html.DisplayFor(modelItem => item.Senha)
-                    </td>*@
-                <td>
-                    @Html.DisplayFor(modelItem => item.Celular)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nascimento)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TiposUsuarios)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Sexos)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                </td>
-            </tr>
+    <style>
+        .menu-wrapper {
+            opacity: 0;
+            width: 100%;
+            height: 100vh;
+            position: absolute;
+            top: 75px;
+            left: 0;
+            z-index: 1;
+            transition: 0.2s;
+            pointer-events: none;
+            box-sizing: border-box;
         }
 
-    </table>
+        .menu-wrapper-content {
+            background: #253A44;
+            padding: 40px 20px;
+        }
+
+        .link-menu-mvp, .menu-content li a {
+            font-family: Poppins;
+        }
+
+        .menu-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            max-width: 1008px;
+            margin: 0 auto;
+        }
+
+        .top-bar, .side-bar {
+            pointer-events: auto;
+        }
+
+        .picture-container {
+            display: flex;
+            justify-content: center;
+            margin: 0 auto;
+            flex-direction: column;
+            font-family: Poppins;
+            align-items: center;
+        }
+
+            .picture-container .perfil-preview {
+                animation: none;
+                position: relative;
+                margin: 0;
+                width: 272px;
+                height: auto;
+                box-sizing: border-box;
+            }
+
+        .perfil-preview {
+            width: 210px;
+            height: 320px;
+            display: flex;
+            flex-direction: column;
+            font-family: Montserrat;
+            border-radius: 7px;
+            z-index: 999;
+            position: absolute;
+            margin: 20px;
+            background-color: #105576;
+            border: 4px solid #1c4561;
+            pointer-events: none;
+            animation: preview-fade-out .0s ease forwards;
+        }
+
+        .top-bar-second-area.open-picture ~ .menu-wrapper {
+            opacity: 1;
+            pointer-events: auto;
+        }
+
+        .menu-container a, .link-menu-mvp, .menu-content li a, header nav.lateral > ul li > a {
+            text-decoration: none;
+        }
+
+        .name-perfil-preview {
+            padding: 13px 12px;
+            color: #FBFBFB;
+            font-size: 15px;
+            text-align: initial;
+            flex: 0 0 auto;
+        }
+
+        .perfil-preview > * {
+            box-sizing: border-box;
+        }
+
+        .picture-perfil-preview {
+            position: relative;
+        }
+
+        .picture-container .perfil-preview .picture-user-preview {
+            height: 250px;
+        }
+
+        .picture-perfil-preview img.picture-user-preview {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            margin: 0 auto;
+            border-radius: 0;
+        }
+
+        .info-perfil-preview {
+            background: rgba(28, 68, 96, 0.95);
+            height: 55px;
+            padding: 8px 15px;
+            box-sizing: border-box;
+            width: 100%;
+            margin-left: 0;
+            display: flex;
+            margin-top: -4px;
+            align-items: center;
+        }
+
+            .info-perfil-preview p {
+                margin: 0;
+                line-height: 1.6em;
+                font-size: 12px;
+                color: #FBFBFB;
+            }
+
+        p {
+            display: block;
+            margin-top: 1em;
+            margin-bottom: 1em;
+            margin-left: 0px;
+            margin-right: 0px;
+        }
+
+        .numbers-perfil-preview {
+            display: flex;
+            height: 50px;
+        }
+
+        .numbers_preview {
+            flex: 1 1 auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            color: #FBFBFB;
+            font-size: 14px;
+            font-weight: 500;
+            width: 33%;
+            padding-top: 3px;
+        }
+
+            .numbers_preview.devup_preview {
+                border: 1px solid rgba(197, 197, 197, 0.3);
+                border-top: none;
+                border-bottom: none;
+            }
+
+        .menu-container .menu-container {
+            padding: 0;
+            padding-left: 100px;
+            flex-wrap: wrap;
+            width: 100%;
+            font-family: Poppins;
+            font-weight: 200;
+        }
+
+        .menu-container-title {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 0 42px;
+            width: 100%;
+        }
+
+            .menu-container-title a {
+                text-decoration: none;
+                color: #fff;
+                font-size: 12px;
+                font-weight: 500;
+                text-align: center;
+                text-transform: uppercase;
+                padding: 10px 20px;
+                background: #0AC5D4;
+                border-radius: 5px;
+                width: 180px;
+            }
+
+
+        .menu-user-name {
+            color: #fff;
+            font-size: 32px;
+            font-weight: 600;
+        }
+
+        .menu-content {
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        ul {
+            display: block;
+            list-style-type: disc;
+            margin-top: 1em;
+            margin-bottom: 1em;
+            margin-left: 0px;
+            margin-right: 0px;
+            padding-left: 40px;
+        }
+
+        .menu-content li {
+            width: calc((100% - 48px ) / 4);
+            height: 100px;
+            background: #2A4753 0% 0% no-repeat padding-box;
+            border-radius: 5px;
+            opacity: 1;
+            margin-bottom: 12px;
+            margin-right: 12px;
+            display: flex;
+            line-height: 26px;
+            box-sizing: border-box;
+        }
+
+        .menu-content-item {
+            padding: 12px 12px;
+            width: 100%;
+            transition: 0.3s;
+        }
+
+            .menu-content-item a {
+                color: #fff;
+                font-size: 17px;
+                font-weight: 200;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                text-decoration: none;
+            }
+
+        li {
+            display: list-item;
+            text-align: match-parent;
+        }
+
+        .menu-content-item-destaque {
+            background-color: #0e7cb1 !important;
+        }
+
+        .menu-container-rodape {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            padding-top: 25px;
+            margin-top: 20px;
+            border-top: 1px solid #395968;
+        }
+
+        .menu-container-rodape-action {
+            display: flex;
+        }
+
+        .menu-container a, .link-menu-mvp, .menu-content li a, header nav.lateral > ul li > a {
+            text-decoration: none;
+        }
+
+        .topo-link-minha-conta, .topo-link-logout {
+            color: #fff;
+            font-size: 14px;
+            font-weight: 400;
+            text-align: center;
+            padding: 10px 12px;
+            background: #20333B;
+            border-radius: 5px;
+            margin-right: 12px;
+            display: flex;
+            align-items: center;
+            box-sizing: border-box;
+        }
+
+        a:-webkit-any {
+            color: -webkit-link;
+            cursor: pointer;
+            text-decoration: underline;
+        }
+
+        .topo-link-minha-conta .a {
+            fill: #fff;
+        }
+
+        :not(svg) {
+            transform-origin: 0px 0px;
+        }
+
+        .topo-link-minha-conta .b {
+            fill: none;
+        }
+
+        .menu-container a, .link-menu-mvp, .menu-content li a, header nav.lateral > ul li > a {
+            text-decoration: none;
+        }
+
+        #indica-btn-menu {
+            color: #fff;
+            font-size: 14px;
+            font-weight: 400;
+            text-align: center;
+            padding: 10px 12px;
+            background: #1F4F66;
+            border-radius: 5px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+        }
+
+        .top-bar span {
+            display: flex;
+        }
+
+        .topo-link-logout .a {
+            fill: none;
+        }
+
+        .topo-link-logout .b {
+            fill: #fff;
+        }
+
+        .topo-link-minha-conta .a {
+            fill: #fff;
+        }
+
+        .topo-link-minha-conta .b {
+            fill: none;
+        }
+    </style>
+
+
+    <div class="container">
+
+        <div class="menu-wrapper-content">
+
+            <div class="menu-container">
+                <div class="picture-container">
+                    <div class="perfil-preview " data-block-preview="5jfdlbdlm5xkhk9z2s12ha07Fnj5rtge4o3q2hnqf90addn4me">
+
+                        <div class="name-perfil-preview">
+                            <div class="preview-nome">
+                                @Html.Label(User.Identity.Name)
+                            </div>
+
+                        </div>
+
+                        <div class="picture-perfil-preview">
+                            <img class="picture-user-preview" src="//www.devmedia.com.br/perfil/img/noimage.jpg">
+                        </div>
+
+                        <div class="info-perfil-preview">
+                            <p>Programador</p>
+                        </div>
+
+                        <div class="numbers-perfil-preview">
+                            <div class="numbers_preview questions_preview">
+                                <i class="icofont-check-circled"></i>
+                                0
+                            </div>
+
+                            <div class="numbers_preview devup_preview">
+                                <i class="icofont-chart-histogram "></i>
+                                57
+                            </div>
+
+                            <div class="numbers_preview achievements_preview">
+                                <i class="icofont-star"></i>
+                                0
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="menu-container">
+                    <div class="menu-container-title">
+                        <div class="menu-user-name">
+                            Olá @Html.Label(User.Identity.Name)
+                        </div>
+
+                        <a href="#">ir para seu perfil</a>
+                    </div>
+
+                    <ul class="menu-content">
+
+                        <li class="menu-content-item"><a href="#">Meus<br>Cursos</a></li>
+                        <li class="menu-content-item"><a href="#">Meus<br>Certificados</a></li>
+                        <li class="menu-content-item"><a href="#">Meus<br>Exercícios</a></li>
+                        <li class="menu-content-item"><a href="#">Minhas<br>Anotações</a></li>
+                        <li class="menu-content-item"><a href="#">Conteúdos<br>Assistidos</a></li>
+
+                        <li class="menu-content-item"><a href="#">Favoritos</a></li>
+
+                        <li class="menu-content-item menu-content-item-destaque"><a href="#" class="menu-user-assine-topo">Teste <br>Grátis</a></li>
+                        <li class="menu-content-item menu-content-item-destaque"><a href="#" class="menu-user-assine-topo">Assine<br>Agora</a></li>
+                    </ul>
+
+                    <div class="menu-container-rodape">
+                        <div class="menu-container-rodape-action">
+                            <a class="topo-link-minha-conta" href="#">
+                                Editar Cadastro&nbsp;&nbsp;
+                                <i class="icofont-pen-alt-2"></i>
+                            </a>
+                            <a class="topo-link-logout" href="~/Usuarios/Sair">
+                                Logout&nbsp;&nbsp;
+                                <i class="icofont-logout"></i>
+                            </a>
+                        </div>
+
+                        <span id="indica-btn-menu">
+                            Indique um amigo
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
