--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
                         <li>@Html.ActionLink("Resumo", "Index", "Usuarios")</li>
                         <li>@Html.ActionLink("Aula", "Aula", "Cursoes")</li>
                         <li>@Html.ActionLink("Histórico", "Historico", "Usuarios")</li>
-                        <li>@Html.ActionLink(User.Identity.Name + " - Sair", "Sair", "Usuarios")</li>
+                        <li>@Html.ActionLink(User.Identity.Name.Split('|')[1] + " - Sair", "Sair", "Usuarios")</li>
                     }
                 </ul>
             </nav><!-- .nav-menu -->
