--- a/Views/Usuarios/Index.cshtml
+++ b/Views/Usuarios/Index.cshtml
@@ -393,8 +393,6 @@
                         <div class="menu-user-name">
                             Olá @Html.Label(User.Identity.Name.Split('|')[1])
                         </div>
-
-                        <a href="#">ir para seu perfil</a>
                     </div>
 
                     <ul class="menu-content">
@@ -412,7 +410,7 @@
 
                     <div class="menu-container-rodape">
                         <div class="menu-container-rodape-action">
-                            <a class="topo-link-minha-conta" href="#">
+                            <a class="topo-link-minha-conta" href="~/Usuarios/Edit">
                                 Editar Cadastro&nbsp;&nbsp;
                                 <i class="icofont-pen-alt-2"></i>
                             </a>
