--- a/Views/Cursoes/Aula.cshtml
+++ b/Views/Cursoes/Aula.cshtml
@@ -170,277 +170,28 @@
     <!-- Sidebar  -->
     <nav id="sidebar">
         <div class="sidebar-header">
-            <h3>Programação com Java</h3>
+            <h3>@Model.Nome</h3>
         </div>
         <div style="overflow:scroll;height:1000px;width:100%; overflow:auto;">
             <ul class="list-unstyled components">
-                <p>Basico</p>
-                <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 1 - LP</a>
-                    <ul id="homeSubmenu" class="collapse list-unstyled">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
-
-                <li>
-                    <a href="#pageSubmenu1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 2 - Variaveis</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu1">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#pageSubmenu2" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 3 - Strings</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu2">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#pageSubmenu3" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 4 - POO</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu3">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#pageSubmenu4" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 5 - Instanciação</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu4">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="list-unstyled components">
-                <p>Intermediario</p>
-                <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 1 - LP</a>
-                    <ul class="collapse list-unstyled" id="homeSubmenu">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#pageSubmenu1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 2 - Variaveis</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu1">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#pageSubmenu2" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 3 - Strings</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu2">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#pageSubmenu3" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 4 - POO</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu3">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#pageSubmenu4" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 5 - Instanciação</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu4">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="list-unstyled components">
-                <p>Avançado</p>
-                <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 1 - LP</a>
-                    <ul class="collapse list-unstyled" id="homeSubmenu">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#pageSubmenu1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 2 - Variaveis</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu1">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#pageSubmenu2" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 3 - Strings</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu2">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#pageSubmenu3" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 4 - POO</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu3">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#pageSubmenu4" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 5 - Instanciação</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu4">
-                        <li>
-                            <button class="a link" href="~/Dia2.pdf" onclick="mostrar('div1')">Apostila</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="https://www.youtube.com/embed/aqiB58NpKLw" onclick="mostrar('div1')">Video Aula</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div3')">Exercicios</button>
-                        </li>
-                        <li>
-                            <button class="a link" href="#" onclick="mostrar('div4')">Avaliação diaria</button>
-                        </li>
-                    </ul>
-                </li>
+                @foreach (var mod in Model.Modulos)
+                {
+                    <p>@mod.Titulo</p>
+                    <li class="active">
+                        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 1 - LP</a>
+                        <ul id="homeSubmenu" class="collapse list-unstyled">
+                            @foreach (var cont in mod.Conteudos)
+                            {
+                                <li>
+                                    <button class="a link" href="~/@cont.Anexos.FirstOrDefault().Url" onclick="mostrar('div1')">@cont.tipo.Tipos</button>
+                                </li>
+                             }
+                        </ul>
+                    </li>
+                 }
             </ul>
         </div>
     </nav>
-
     <!-- Page Content  -->
     <div id="content">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
