Adaptação do banco de dados

--- a/Views/Cursoes/Aula.cshtml
+++ b/Views/Cursoes/Aula.cshtml
@@ -192,7 +192,7 @@
                                     @foreach (var conte in cont.Anexos)
                                     {
                                         <li>
-                                            <button class="a link" href="~/@conte.Url" onclick="mostrar('div1')">@conte.Titulo</button>
+                                            <button class="a link" href="~/@conte.Url" onclick="mostrar('div1')">@conte.Tipos</button>
                                         </li>
                                     }
                                 </ul>
