--- a/Views/Usuarios/Index.cshtml
+++ b/Views/Usuarios/Index.cshtml
@@ -239,6 +239,12 @@
             transition: 0.3s;
         }
 
+            .menu-content-item:hover {
+                background: #105576;
+                -webkit-filter: drop-shadow(15px 10px 5px rgba(0,0,0,.5));
+                filter: drop-shadow(15px 10px 5px rgba(0,0,0,.5));
+            }
+
             .menu-content-item a {
                 color: #fff;
                 font-size: 17px;
@@ -248,6 +254,8 @@
                 align-items: center;
                 text-decoration: none;
             }
+
+
 
         li {
             display: list-item;
@@ -345,7 +353,6 @@
         }
     </style>
 
-
     <div class="container">
 
         <div class="menu-wrapper-content">
@@ -397,15 +404,15 @@
 
                     <ul class="menu-content">
 
-                        <li class="menu-content-item"><a href="#">Meus<br>Cursos</a></li>
-                        <li class="menu-content-item"><a href="#">Meus<br>Certificados</a></li>
-                        <li class="menu-content-item"><a href="#">Meus<br>Exercícios</a></li>
-                        <li class="menu-content-item"><a href="#">Minhas<br>Anotações</a></li>
-                        <li class="menu-content-item"><a href="#">Conteúdos<br>Assistidos</a></li>
-                        <li class="menu-content-item"><a href="#">Favoritos</a></li>
+                        <li class="menu-content-item"><a href="#">Continue<br />Estudando</a></li>
+                        <li class="menu-content-item"><a href="#">Meus<br />Cursos</a></li>
+                        <li class="menu-content-item"><a href="#">Meus<br />Exercícios</a></li>
+                        <li class="menu-content-item"><a href="#">Meus<br />Certificados</a></li>
+                        <li class="menu-content-item"><a href="#">Plano de<br />Estudos</a></li>
+                        <li class="menu-content-item"><a href="#">Simulados</a></li>
 
-                        <li class="menu-content-item menu-content-item-destaque"><a href="#" class="menu-user-assine-topo">Teste <br>Grátis</a></li>
-                        <li class="menu-content-item menu-content-item-destaque"><a href="#" class="menu-user-assine-topo">Assine<br>Agora</a></li>
+                        <li class="menu-content-item"><a href="#">Histórico de <br />testes</a></li>
+                        <li class="menu-content-item menu-content-item-destaque"><a href="#" class="menu-user-assine-topo">Seja Premium</a></li>
                     </ul>
 
                     <div class="menu-container-rodape">
