--- a/Views/Usuarios/Index.cshtml
+++ b/Views/Usuarios/Index.cshtml
@@ -421,6 +421,14 @@
                                 Editar Cadastro&nbsp;&nbsp;
                                 <i class="icofont-pen-alt-2"></i>
                             </a>
+                            
+                           
+                            <a class="topo-link-minha-conta btnDetalhes" href="~/Usuarios/Details"> 
+                                Detalhes&nbsp;&nbsp;
+                                <i class="icofont-attachment"></i>
+                            </a>
+
+
                             <a class="topo-link-logout" href="~/Usuarios/Sair">
                                 Logout&nbsp;&nbsp;
                                 <i class="icofont-logout"></i>
@@ -436,3 +444,5 @@
         </div>
     </div>
 </div>
+
+ 
