Editar Usuario funcionando

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
     </style>
 
     <!-- ======= Top Bar ======= -->
-    <section id="topbar" class="d-none d-lg-block">
+    <!--<section id="topbar" class="d-none d-lg-block">
         <div class="container clearfix">
             <div class="contact-info float-left">
                 <i class="icofont-envelope"></i><a href="mailto:contact@example.com">30code@gmail.com</a>
@@ -50,7 +50,7 @@
                 <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- ======= Header ======= -->
     <header id="header">
