Pequenas atualizações de front

--- a/Views/Usuarios/Details.cshtml
+++ b/Views/Usuarios/Details.cshtml
@@ -4,10 +4,9 @@
 
     @{ ViewBag.Title = "Details"; }
 
-    <h2>Details</h2>
+    <h2>Detalhes</h2>
 
     <div>
-        <h4>Usuario</h4>
         <hr />
         <div class="container">
             <div class="row">
