--- a/Views/Usuarios/Edit.cshtml
+++ b/Views/Usuarios/Edit.cshtml
@@ -3,19 +3,22 @@
 
     @{ ViewBag.Title = "Edit"; }
 
-    <h2>Edit</h2>
-
+    <h2>Meus dados</h2>
+    <style>
+        .btn {
+            border: 1px solid #000;
+        }
+    </style>
 
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>Usuario</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="row">
-                <div class="col-6">
+                <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="form-group">
                         @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -24,7 +27,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="form-group">
                         @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -34,7 +37,7 @@
                     </div>
                 </div>
 
-                <div class="col-6">
+                <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="form-group">
                         @Html.LabelFor(model => model.Celular, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -43,7 +46,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="form-group">
                         <label>&nbsp;&nbsp;&nbsp; Nascimento</label>
                         <div class="col-md-10">
@@ -52,7 +55,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="form-group">
                         @Html.LabelFor(model => model.Sexos, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -61,7 +64,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="form-group">
                         @Html.LabelFor(model => model.Senha, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -70,7 +73,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="form-group">
                         @Html.LabelFor(model => model.ConfirmaSenha, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -81,8 +84,8 @@
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-primary" />
+                <div class="col-10">
+                    <input type="submit" value="Save" class="btn btn-default btn-block" />
                 </div>
             </div>
         </div>
