--- a/Views/Usuarios/EsqueceuSenha.cshtml
+++ b/Views/Usuarios/EsqueceuSenha.cshtml
@@ -22,8 +22,8 @@
             </div>
 
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                <div class="col-md-2">
+                    <input type="submit" value="Enviar"style="border: 1px solid #000000" class="btn btn-default btn-block" />
                 </div>
             </div>
         </div>
