--- a/Views/Usuarios/Index.cshtml
+++ b/Views/Usuarios/Index.cshtml
@@ -412,7 +412,10 @@
                         <li class="menu-content-item"><a href="#">Simulados</a></li>
 
                         <li class="menu-content-item"><a href="#">Histórico de <br />testes</a></li>
-                        <li class="menu-content-item menu-content-item-destaque"><a href="#" class="menu-user-assine-topo">Seja Premium</a></li>
+                        @if (Model.TiposUsuarios == _30Code.Models.Usuario.TipoUsuario.Comum)
+                        {
+                            <li class="menu-content-item menu-content-item-destaque"><a href="#" class="menu-user-assine-topo">Seja Premium</a></li>
+                        }
                     </ul>
 
                     <div class="menu-container-rodape">
@@ -421,9 +424,9 @@
                                 Editar Cadastro&nbsp;&nbsp;
                                 <i class="icofont-pen-alt-2"></i>
                             </a>
-                            
-                           
-                            <a class="topo-link-minha-conta btnDetalhes" href="~/Usuarios/Details"> 
+
+
+                            <a class="topo-link-minha-conta btnDetalhes" href="~/Usuarios/Details">
                                 Detalhes&nbsp;&nbsp;
                                 <i class="icofont-attachment"></i>
                             </a>
@@ -445,4 +448,3 @@
     </div>
 </div>
 
- 
